--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -4,4 +4,9 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
 server.port=8080
 
-shareit-server.url=http://server:9090
+shareit-server.url=${SHAREIT_SERVER_URL:http://localhost:9090}
+
+pagination.from.size.path=?from={from}&size={size}
+item.search.path=/search?text={text}&from={from}&size={size}
+all.requests.get.path=/all?from={from}&size={size}
+bookings.get.with.status.path=?state={state}&from={from}&size={size}
